# krishisevak

./: .gitignore  README.md  app.py  demo.py  lol.py  pyproject.toml  setup.py
artifact/06_25_2026_07_16_26/data_ingestion/ingested/: train.csv
artifact/06_27_2026_06_40_35/data_transformation/transformed/: train.npy
artifact/06_27_2026_06_40_35/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_27_2026_09_58_33/data_ingestion/feature_store/: Crop_recommendation.csv
artifact/06_27_2026_09_58_33/data_transformation/transformed/: test.npy
artifact/06_27_2026_11_31_59/data_ingestion/ingested/: test.csv
artifact/06_27_2026_11_31_59/data_transformation/transformed_object/: preprocessing.pkl
config/: schema.yaml
notebook/: crop_prediction.ipynb  mongo_db_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
static/css/: style.css
templates/: index.html
