[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishisevak"          # Better name
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Dhruv Kulshrestha", email = "dhruvkul2004@gmail.com"}]
readme = "README.md"            # optional but recommended
requires-python = ">=3.8"       # add this

dependencies = [
    # You can keep using dynamic, or list them here
]

[tool.setuptools]
packages = {find = {}}
package-dir = {"" = "src"}      # if you use src/ layout

# Optional: development dependencies
[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    # etc.
]