[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishisevak"
version = "0.0.1"
description = "Crop Recommendation MLOps Project"
authors = [
    {name = "Dhruv Kulshrestha", email = "dhruvkul2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]